# pokeapi-python-wrapper

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
contributing/: index.html
docs/: contributing.md  index.md
docs/community/: contributing.md  index.md
docs/reference/: index.md
docs/reference/api/: index.md  sprites.md
docs/usage/: index.md  usage_async.md  usage_sync.md
pypokeclient/: __init__.py  async_client.py  base_client.py  sync_client.py  utils.py
pypokeclient/_api/: __init__.py  sprites.py
pypokeclient/_api/encounters/: encounter_condition_values.py
pypokeclient/_api/evolution/: evolution_chains.py
pypokeclient/_api/games/: pokedexes.py
pypokeclient/_api/items/: items.py
pypokeclient/_api/moves/: moves.py
pypokeclient/_api/pokemon/: pokemon.py  pokemon_forms.py  stats.py  types.py
reference/: index.html
reference/api/berries/berries/: index.html
reference/api/berries/berry_firmnesses/: index.html
reference/api/berries/berry_flavors/: index.html
reference/api/common_models/: index.html
reference/api/contests/contest_effects/: index.html
reference/api/contests/contest_types/: index.html
reference/api/contests/super_contest_effects/: index.html
reference/api/encounters/encounter_condition_values/: index.html
reference/api/encounters/encounter_conditions/: index.html
reference/api/encounters/encounter_methods/: index.html
reference/api/evolution/evolution_chains/: index.html
reference/api/evolution/evolution_triggers/: index.html
reference/api/games/generations/: index.html
reference/api/games/pokedexes/: index.html
reference/api/games/version/: index.html
reference/api/games/version_groups/: index.html
reference/api/items/item_attributes/: index.html
reference/api/items/item_categories/: index.html
reference/api/items/item_fling_effects/: index.html
reference/api/items/item_pockets/: index.html
reference/api/items/items/: index.html
reference/api/languages/: index.html
reference/api/locations/location_areas/: index.html
reference/api/locations/locations/: index.html
reference/api/locations/pal_park_areas/: index.html
reference/api/locations/regions/: index.html
reference/api/machines/machines/: index.html
reference/api/moves/move_ailments/: index.html
reference/api/moves/move_battle_styles/: index.html
reference/api/moves/move_categories/: index.html
reference/api/moves/move_damage_classes/: index.html
reference/api/moves/move_learn_methods/: index.html
reference/api/moves/move_targets/: index.html
reference/api/moves/moves/: index.html
reference/api/pokemon/abilities/: index.html
reference/api/pokemon/characteristics/: index.html
reference/api/pokemon/egg_groups/: index.html
reference/api/pokemon/genders/: index.html
reference/api/pokemon/growth_rates/: index.html
reference/api/pokemon/natures/: index.html
reference/api/pokemon/pokeathlon_stats/: index.html
reference/api/pokemon/pokemon/: index.html
reference/api/pokemon/pokemon_colors/: index.html
reference/api/pokemon/pokemon_forms/: index.html
reference/api/pokemon/pokemon_habitats/: index.html
reference/api/pokemon/pokemon_location_areas/: index.html
reference/api/pokemon/pokemon_shapes/: index.html
reference/api/pokemon/pokemon_species/: index.html
reference/api/pokemon/stats/: index.html
reference/api/resource_lists/: index.html
reference/api/sprites/: index.html
reference/async_client/: index.html
reference/base_client/: index.html
reference/sync_client/: index.html
search/: search_index.json
tests/: test_cache_hishel.py  test_endpoint_calls.py  test_endpoint_contracts.py
usage/: index.html
usage/usage_async/: index.html
usage/usage_sync/: index.html
(+1 files in other folders)
