[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypokeclient"
version = "2.0.0"
description = "Synchronous and asynchronous clients to interact with PokéAPI"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Alessandro Ristori", email = "aleristori97@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["pokeapi", "pokemon-api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "hishel[httpx]>=1.0.0",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/RistoAle97/pokeapi-python-wrapper"
Documentation = "https://ristoale97.github.io/pokeapi-python-wrapper/"
Repository = "https://github.com/RistoAle97/pokeapi-python-wrapper"
Issues = "https://github.com/RistoAle97/pokeapi-python-wrapper/issues"

[dependency-groups]
dev = [
    "prek>=0.2.9",
    "ruff>=0.13.0",
    "ty>=0.0.2",
    "typos>=1.38.1",
]
docs = [
    "griffe-typingdoc",
    "griffe-inherited-docstrings",
    "mkdocs-material",
    "mkdocstrings-python",
]

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py312"

[tool.ruff.lint]
select = [
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle errors
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "TID",  # flake8-tidy-imports
    "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
