[project]
name = "pypokeclient"
version = "2.0.2"
description = "Synchronous and asynchronous clients to interact with PokéAPI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alessandro Ristori", email = "aleristori97@gmail.com" }]
keywords = ["pokeapi", "pokemon-api"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "hishel[httpx]>=1.0.0",
  "httpx[http2]>=0.28.1",
  "pydantic>=2.11.7",
]

[project.urls]
Documentation = "https://ristoale97.github.io/pokeapi-python-wrapper/"
Homepage = "https://github.com/RistoAle97/pokeapi-python-wrapper"
Issues = "https://github.com/RistoAle97/pokeapi-python-wrapper/issues"
Repository = "https://github.com/RistoAle97/pokeapi-python-wrapper"

[dependency-groups]
dev = [
  "prek>=0.3.8",
  "ruff>=0.15.0",
  "tombi>=0.9.13",
  "ty>=0.0.28",
  "typos>=1.38.1",
]
docs = [
  "griffe-inherited-docstrings",
  "griffe-typingdoc",
  "mkdocstrings-python",
  "zensical>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py312"

[tool.ruff.lint]
select = [
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",  # pydocstyle errors
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
